[package]
name = "paper_trading"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "paper_trading"
path = "src/main.rs"

[dependencies]
# Core
rust_decimal = { version = "1.36", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }

# Async
tokio = { version = "1.42", features = ["full"] }
async-trait = "0.1"

# Internal dependencies
domain_types = { path = "../../domain_types" }
# ml = { path = "../ml" }  # Temporarily disabled
# infrastructure = { path = "../infrastructure" }  # Temporarily disabled  
# risk = { path = "../risk" }  # Temporarily disabled due to compilation issues

# Logging
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Collections
hashbrown = "0.15"
dashmap = "5.5"

# Performance
parking_lot = "0.12"
crossbeam = "0.8"
rayon = "1.8"
mimalloc = { version = "0.1", default-features = false }

# Math
nalgebra = "0.32"
petgraph = "0.6"
rand = "0.8"

# Error handling
anyhow = "1.0"

# UUID generation
uuid = { version = "1.11", features = ["v4"] }

[dev-dependencies]
tokio-test = "0.4"