[package]
name = "paper_trading"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.47", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.30", features = ["serde"] }
rust_decimal_macros = "1.30"
uuid = { version = "1.10", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "6.1"
anyhow = "1.0"
thiserror = "1.0"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "rust_decimal", "uuid"] }
prometheus = "0.13"
config = "0.14"

# Internal dependencies (simplified due to compilation issues)
# domain_types = { path = "../domain_types" }
# infrastructure = { path = "../infrastructure" }
