[package]
name = "trading_engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
# Core dependencies
anyhow = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
rust_decimal = { version = "1.33", features = ["serde"] }
bincode = "1.3"

# Concurrency
parking_lot = "0.12"
crossbeam-queue = "0.3"

# Logging
log = "0.4"

# Performance
memmap2 = "0.9"
crc32fast = "1.3"

# Random
rand = "0.8"

# Testing
tempfile = "3.8"
futures = "0.3"
